# town

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.h.in  town_config.h.in
client/: CMakeLists.txt
client/src/test/: CMakeLists.txt
client/src/test/src/: client_main.cpp
client/town_linux/: main.cpp  main.qml  qml.qrc  town_linux.pro
client/town_linux/common/: Booster.hpp  Logger.hpp  TownJson.hpp
client/town_linux/communication/: ComCommon.h  GlobalTcpClient.cpp  GlobalTcpClient.h  TcpClient.cpp  TcpClient.h
client/town_linux/config/: LogConfig.json
client/town_linux/qml/: QmlCommon.h  QmlRegister.cpp  QmlRegister.h
client/town_linux/qmlcpp/: QmlRegister.cpp
client/town_linux/ui/qml/: main.qml
client/town_test/: CMakeLists.txt
client/town_test/src/test/: CMakeLists.txt
client/town_test/src/test/src/: client_main.cpp
doc/: README.md  TownCommunicationProtocol.md
src/common/: Booster.hpp  JsonParse.hpp  Jsoner.hpp  Logger.hpp  MySqler.hpp  RapidJsoner.hpp  SecureQueue.hpp  Spdlogger.hpp  ThreadPool.hpp  TownJson.hpp  common.h  mysql_define.h  town_config.h
src/config/: ErrorMgsConfig.json  LogConfig.json  MysqlConfig.json  MysqlInfo.json  ServerConfig.json
src/database/: CMakeLists.txt
src/database/includes/: MysqlCommon.h  MysqlOpt.h
src/database/logic/inc/: MysqlAddOpt.h  MysqlChangeOpt.h  MysqlDeleteOpt.h  MysqlOpt.h  MysqlOptHandle.h  MysqlOptHandleInfc.h  MysqlSearchOpt.h
src/database/logic/src/: MysqlAddOpt.cpp  MysqlChangeOpt.cpp  MysqlDeleteOpt.cpp  MysqlOpt.cpp  MysqlOptHandle.cpp  MysqlOptHandleInfc.cpp  MysqlSearchOpt.cpp
src/database/platform/inc/: MysqlAccessImpl.h  MysqlAccessInfc.h  MysqlAccessManage.h  MysqlInterface.h
src/database/platform/src/: MysqlAccessImpl.cpp  MysqlAccessInfc.cpp  MysqlAccessManage.cpp  MysqlInterface.cpp
src/includes/: MysqlAccess.h  common.h
src/main/: CMakeLists.txt  main.cpp
src/mysql/: CMakeLists.txt  mysql_record.md
src/mysql/inc/: MysqlAccessImpl.h  MysqlCommon.h
src/mysql/include/: MysqlAccessImpl.h  MysqlCommon.h
src/mysql/includes/: MysqlCommon.h
src/mysql/platform/inc/: MysqlAccessImpl.h  MysqlAccessManage.h
src/mysql/platform/src/: MysqlAccessImpl.cpp  MysqlAccessManage.cpp
src/mysql/src/: MysqlAccess.cpp  MysqlAccessImpl.cpp
src/proto/: CMakeLists.txt  compile_proto.cmake
src/proto/protofile/: user.proto
src/proto/protofile/check/: check_change.sh
src/proto/src/: user.pb.cc  user.pb.h
src/server/: CMakeLists.txt  server_record.md
src/server/business_logic/inc/: RegisterMsgDeal.h
src/server/inc/: ClientHandle.h  DataParsing.h  ServerCommon.h  ServerEvent.h  ServerMassage.h  ServerMessage.h
src/server/includes/: MsgDeal.h  ServerCommon.h
src/server/logic/inc/: CommonMsgDeal.h  LoginMsgDeal.h  RegisterMsgDeal.h
src/server/logic/src/: CommonMsgDeal.cpp  LoginMsgDeal.cpp  RegisterMsgDeal.cpp
src/server/platform/inc/: ClientHandle.h  ServerEvent.h  ServerEventInfc.h  ServerGateway.h  ServerGatewayInfc.h
src/server/platform/src/: ClientHandle.cpp  ServerEvent.cpp  ServerEventInfc.cpp  ServerGateway.cpp  ServerGatewayInfc.cpp
src/server/src/: ClientHandle.cpp  ServerEvent.cpp  ServerGateway.cpp  ServerMassage.cpp  ServerMessage.cpp
src/test/: CMakeLists.txt
src/test/src/: main.cpp
